test/compile-fail/resolution/conflicts/impl/expected.txt
error[E0428]: the name `b` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/impl/top.rhdl:3:8
  │
3 │     fn b () {}
  │        - previous definition of the name `b` here
4 │     const b: c = false;
  │           ^ `b` redefined here

